<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">FoodDelivery</string>
    <!-- Start screen -->
    <string name="food_logo_description" translatable="false">Food logo</string>
    <string name="starting_title" translatable="false">Waves Of Food</string>
    <string name="starting_subtitle" translatable="false">Deliver Favorite Food</string>
    <string name="footer_design_by" translatable="false">Design By \nNeatRoots</string>

    <!-- Second screen -->
    <string name="btn_next" translatable="false">Next</string>
    <string name="second_title" translatable="false">Enjoy Restaurant Quality Meals \n at Home</string>

    <!-- Login screen -->
    <string name="login_to_acc" translatable="false">Login To Your Account</string>
    <string name="name_hint" translatable="false">Name</string>
    <string name="email_hint" translatable="false">Email</string>
    <string name="password_hint" translatable="false">Password</string>
    <string name="or_text" translatable="false">Or</string>
    <string name="login_using" translatable="false">Continue With</string>
    <string name="help_acc" translatable="false">Don’t Have Account?</string>
    <string name="btn_facebook" translatable="false">Facebook</string>
    <string name="btn_google" translatable="false">Google</string>
    <string name="btn_login" translatable="false">Login</string>

    <!-- SignUp screen -->
    <string name="sign_up_here" translatable="false">Sign Up Here</string>
    <string name="sign_up_with" translatable="false">Sign Up With</string>
    <string name="btn_create_acc" translatable="false">Create Account</string>
    <string name="account_created" translatable="false">Already Have An Account?</string>

    <!-- Choose Location screen -->
    <string name="choose_location" translatable="false">Choose Your Location</string>
    <string name="geoData_request" translatable="false">To provide you with the best dining experience, we need your permission to access your device\'s location. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience." </string>

    <!-- Menu screen -->
    <string name="menu_item_home" translatable="false">Home</string>
    <string name="menu_item_cart" translatable="false">Cart</string>
    <string name="menu_item_search" translatable="false">Search</string>
    <string name="menu_item_history" translatable="false">History</string>
    <string name="menu_item_profile" translatable="false">Profile</string>
    <string name="favorite_food" translatable="false">Explore Your Favorite Food</string>

    <!-- Home fragment screen -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="popular_text" translatable="false">Popular</string>
    <string name="view_menu_text" translatable="false">View Menu</string>
    <string name="menu_item_one" translatable="false">Herbal Pancake</string>
    <string name="menu_price" translatable="false">$7</string>
    <string name="add_to_cart" translatable="false">Add To Cart</string>
    <string name="photo_menu_description" translatable="false">Photo Menu</string>

    <!-- Cart fragment screen -->
    <string name="menu_price_cart" translatable="false">1</string>
    <string name="menu_proceed" translatable="false">Proceed</string>
    <string name="menu_head" translatable="false">Cart</string>
    <string name="delete_image_description" translatable="false">Delete</string>
    <string name="plus_image_description" translatable="false">Plus</string>
    <string name="minus_image_description" translatable="false">Minus</string>

    <!-- ViewMenu fragment screen -->
    <string name="view_menu_head" translatable="false">Menu</string>

    <!-- Search fragment screen -->
    <string name="order_question_hint" translatable="false">What do you want to order?</string>

    <!-- History fragment screen -->
    <string name="recent_buy_head" translatable="false">Recent buy</string>
    <string name="early_purchase" translatable="false">Previously buy</string>
    <string name="buy_again" translatable="false">Buy again</string>

    <!-- Profile fragment screen -->
    <string name="profile_address" translatable="false">Address</string>
    <string name="profile_phone" translatable="false">Phone</string>
    <string name="profile_email_hint" translatable="false">loremipsum@gmail.com</string>
    <string name="profile_phone_hint" translatable="false">+70000000000</string>
    <string name="save_information_btn" translatable="false">Save information</string>

    <!-- Notification fragment screen -->
    <string name="notification_title" translatable="false">Notifications</string>

    <!-- Payment activity screen -->
    <string name="payment_title" translatable="false">Edit</string>
    <string name="payment_method_item" translatable="false">Payment Method</string>
    <string name="payment_amount_item" translatable="false">Total Amount</string>
    <string name="payment_place_order_btn" translatable="false">Place My Order</string>
    <string name="pay_back_img_description" translatable="false">Image pay back</string>
    <string name="pay_method_img_description" translatable="false">Image pay method</string>

    <!-- Congrats fragment screen -->
    <string name="congrats_title" translatable="false">Congrats \n Your Order Placed</string>
    <string name="congrats_home_btn" translatable="false">Go Home</string>
    <string name="payment_completed_description" translatable="false">Payment completed</string>
</resources>