<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/menu_home"
        android:title="@string/menu_item_home" />
    <item
        android:id="@+id/cartFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/menu_cart"
        android:title="@string/menu_item_cart" />
    <item
        android:id="@+id/searchFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_item_search" />
    <item
        android:id="@+id/historyFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/menu_list"
        android:title="@string/menu_item_history" />
    <item
        android:id="@+id/profileFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/menu_user"
        android:title="@string/menu_item_profile" />
</menu>