<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/startLogo"
        android:layout_width="91dp"
        android:layout_height="92dp"
        android:layout_marginTop="83dp"
        android:contentDescription="@string/food_logo_description"
        app:layout_constraintBottom_toTopOf="@+id/wavesOfFo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/wavesOfFo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starting_title"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:fontFamily="@font/yeonsung"
        app:layout_constraintBottom_toTopOf="@+id/subtitleDeliever"
        app:layout_constraintEnd_toEndOf="@id/startLogo"
        app:layout_constraintStart_toStartOf="@id/startLogo"
        app:layout_constraintTop_toBottomOf="@+id/startLogo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subtitleDeliever"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/starting_subtitle"
        android:textColor="@color/start_color_green"
        android:textSize="17sp"
        android:textStyle="bold"
        app:fontFamily="@font/lato"
        app:layout_constraintBottom_toTopOf="@id/loginToYo"
        app:layout_constraintEnd_toEndOf="@id/wavesOfFo"
        app:layout_constraintStart_toStartOf="@id/wavesOfFo"
        app:layout_constraintTop_toBottomOf="@+id/wavesOfFo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/loginToYo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/login_to_acc"
        android:textColor="@color/start_color_green"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="@font/lato"
        app:layout_constraintBottom_toTopOf="@id/signInEmail"
        app:layout_constraintEnd_toEndOf="@id/subtitleDeliever"
        app:layout_constraintStart_toStartOf="@id/subtitleDeliever"
        app:layout_constraintTop_toBottomOf="@+id/subtitleDeliever" />

    <EditText
        android:id="@+id/signInEmail"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="17dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_bg"
        android:elevation="2in"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:outlineSpotShadowColor="@color/start_color_green"
        android:paddingStart="28dp"
        android:textSize="17sp"
        app:fontFamily="@font/lato"
        app:layout_constraintBottom_toTopOf="@+id/signInPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginToYo"
        tools:ignore="InOrMmUsage,RtlSymmetry,UnusedAttribute" />

    <EditText
        android:id="@+id/signInPassword"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text_bg"
        android:elevation="2in"
        android:fontFamily="@font/lato"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:outlineSpotShadowColor="@color/start_color_green"
        android:paddingStart="28dp"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/or"
        app:layout_constraintEnd_toEndOf="@id/signInEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signInEmail"
        app:layout_constraintTop_toBottomOf="@+id/signInEmail"
        tools:ignore="InOrMmUsage,RtlSymmetry,UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/or_text"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:fontFamily="@font/yeonsung"
        app:layout_constraintBottom_toTopOf="@id/continueText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInPassword" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/continueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_using"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:fontFamily="@font/yeonsung"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUpFb"
        app:layout_constraintEnd_toEndOf="@+id/or"
        app:layout_constraintStart_toStartOf="@+id/or"
        app:layout_constraintTop_toBottomOf="@+id/or" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUpFb"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/btn_facebook_shape"
        android:drawableLeft="@drawable/facebook"
        android:fontFamily="@font/lato"
        android:outlineSpotShadowColor="@color/start_color_green"
        android:paddingLeft="22dp"
        android:paddingRight="20dp"
        android:text="@string/btn_facebook"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/continueText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueText"
        tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUpGoogle"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/btn_facebook_shape"
        android:drawableLeft="@drawable/google"
        android:fontFamily="@font/lato"
        android:outlineSpotShadowColor="@color/start_color_green"
        android:paddingLeft="31dp"
        android:paddingRight="31dp"
        android:text="@string/btn_google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/continueText"
        app:layout_constraintTop_toBottomOf="@+id/continueText"
        tools:ignore="RtlHardcoded,RtlSymmetry,UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/green_btn"
        android:elevation="4dp"
        android:fontFamily="@font/yeonsung"
        android:outlineAmbientShadowColor="@color/start_color_green"
        android:outlineSpotShadowColor="@color/start_color_green"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnSignUpUser"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUpGoogle"
        app:layout_constraintStart_toStartOf="@+id/btnSignUpFb"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUpFb"
        tools:ignore="UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnSignUpUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/help_acc"
        android:textColor="@color/start_color_green"
        android:textSize="12sp"
        app:fontFamily="@font/lato"
        app:layout_constraintBottom_toTopOf="@id/desingAuthor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/desingAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/footer_design_by"
        android:textAlignment="center"
        android:textColor="@color/start_color_green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/yeonsung"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUpUser" />

</androidx.constraintlayout.widget.ConstraintLayout>