<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".StartActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="333dp"
        android:layout_height="312dp"
        android:layout_marginTop="112dp"
        android:contentDescription="@string/food_logo_description"
        app:layout_constraintBottom_toTopOf="@id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/burgerr" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/yeonsung"
        android:text="@string/second_title"
        android:textAlignment="center"
        android:textColor="@color/start_color_green"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btn_go_user_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_go_user_login"
        android:layout_width="157dp"
        android:layout_height="57dp"
        android:layout_marginTop="162dp"
        android:background="@drawable/green_btn"
        android:fontFamily="@font/yeonsung"
        android:text="@string/btn_next"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        android:gravity="center"
        android:outlineSpotShadowColor="@color/start_color_green"
        android:outlineAmbientShadowColor="@color/start_color_green"
        android:elevation="3dp"
        app:layout_constraintBottom_toTopOf="@id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/yeonsung"
        android:text="@string/footer_design_by"
        android:textAlignment="center"
        android:textColor="@color/start_color_green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_go_user_login" />
</androidx.constraintlayout.widget.ConstraintLayout>