<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.CongratsBottomSheetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="72dp"
            android:text="@string/congrats_title"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:fontFamily="@font/yeonsung" />

        <ImageView
            android:id="@+id/paymentСompleted"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/payment_completed_description"
            android:src="@drawable/n_success" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/goHomeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/add_to_cart_shape"
            android:fontFamily="@font/yeonsung"
            android:paddingStart="50dp"
            android:paddingTop="18dp"
            android:paddingEnd="50dp"
            android:paddingBottom="18dp"
            android:text="@string/congrats_home_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="21sp" />
    </LinearLayout>

</FrameLayout>